--- a/PvZRandomizer/PvZRandomizer.csproj
+++ b/PvZRandomizer/PvZRandomizer.csproj
@@ -80,9 +80,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="input\" />
-    <Folder Include="output\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
