Add randomization for plant sun costs

--- a/PvZRandomizer/PvZRandomizer.csproj
+++ b/PvZRandomizer/PvZRandomizer.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="utility\Conversion.cs" />
     <Compile Include="utility\Randomize.cs" />
     <EmbeddedResource Include="GUI.resx">
       <DependentUpon>GUI.cs</DependentUpon>
