--- a/PvZRandomizer/PvZRandomizer.csproj
+++ b/PvZRandomizer/PvZRandomizer.csproj
@@ -54,8 +54,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="utility\Conversion.cs" />
-    <Compile Include="utility\Randomize.cs" />
+    <Compile Include="Utility\Conversion.cs" />
+    <Compile Include="Utility\Randomize.cs" />
     <EmbeddedResource Include="GUI.resx">
       <DependentUpon>GUI.cs</DependentUpon>
     </EmbeddedResource>
