--- a/PvZRandomizer/PvZRandomizer.csproj
+++ b/PvZRandomizer/PvZRandomizer.csproj
@@ -49,7 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\GameData.cs" />
+    <Compile Include="Data\RechargeRateData.cs" />
+    <Compile Include="Data\SunCostData.cs" />
     <Compile Include="GUI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +62,7 @@
     <Compile Include="Data\Plant.cs" />
     <Compile Include="Utility\Conversion.cs" />
     <Compile Include="Utility\Randomize.cs" />
+    <Compile Include="Utility\Restore.cs" />
     <EmbeddedResource Include="GUI.resx">
       <DependentUpon>GUI.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,7 +95,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
